<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesActivities.Notes.EditNote">

    <TextView
        android:id="@+id/edit_new_note_activity_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_new_note"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_new_note_title_activity"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_margin="10dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/shaped_corner"
        android:hint="@string/edit_new_note_title"
        android:textColorHint="@color/black"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_note_activity_main_text" />

    <EditText
        android:id="@+id/edit_new_note_description_activity"
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/shaped_corner"
        android:gravity="top"
        android:hint="@string/edit_new_note_description"
        android:textColorHint="@color/black"
        android:lines="10"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_new_note_title_activity"
        app:layout_constraintStart_toStartOf="@+id/edit_new_note_title_activity"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_note_title_activity" />

    <Button
        android:id="@+id/edit_new_note_activity_save_note_button"
        android:layout_width="390dp"
        android:layout_height="53dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/shaped_corner"
        android:text="@string/edit_new_note_save_note"
        app:layout_constraintEnd_toEndOf="@+id/edit_new_note_description_activity"
        app:layout_constraintStart_toStartOf="@+id/edit_new_note_description_activity"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_note_description_activity" />
</androidx.constraintlayout.widget.ConstraintLayout>