<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivities.MainActivity">


    <ImageView
        android:id="@+id/icon_main_activity"
        android:layout_width="367dp"
        android:layout_height="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926"
        app:srcCompat="@drawable/note_main_activity" />

    <TextView
        android:id="@+id/welcome_main_text"
        android:layout_width="295dp"
        android:layout_height="105dp"
        android:text="@string/Welcome_To_the_app"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/icon_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/login_main_activity_button"
        android:layout_width="188dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_main_text" />

    <Button
        android:id="@+id/signup_main_activity_butten"
        android:layout_width="274dp"
        android:layout_height="87dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="94dp"
        android:background="@android:color/black"
        android:text="@string/no_have_account"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/icon_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_main_activity_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>